test/mulberry/Language/block_scope_error.mulberry
# RUN: not mulberry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  if true {
    var scopedValue: UInt64 = 1;
  } else {
  }

  return scopedValue;
}

# CHECK: error: undefined variable
